@@ -2,6 +2,7 @@
 
 * Added pan tool, also available in selection tool by middle clicking or holding left & right buttons
 * Level view selection is now a tool.
+* Geometry tag and levelExit filter now provides auto-completion
 
 
 - Version 0.4.0:
